# TasksPP

./: .gitignore
lab_1/: CMakeLists.txt  MinDiffSiblings.cpp  MinDiffSiblings.hpp  main.cpp  test_main.cpp
task_1/: CMakeLists.txt
task_1/task_1_1/: CMakeLists.txt  main.cpp
task_1/task_1_10/: CMakeLists.txt  main_client.cpp  main_server.cpp
task_1/task_1_2/: CMakeLists.txt  main.cpp
task_1/task_1_3/: CMakeLists.txt  main.cpp
task_1/task_1_4/: CMakeLists.txt  main.cpp
task_1/task_1_5/: CMakeLists.txt  main.cpp
task_1/task_1_6/: CMakeLists.txt  main.cpp
task_1/task_1_7/: CMakeLists.txt  main.cpp
task_1/task_1_8/: CMakeLists.txt  main.cpp
task_1/task_1_9/: CMakeLists.txt  main.cpp
task_2/: CMakeLists.txt
task_2/task_2_1/: CMakeLists.txt  main.cpp
task_2/task_2_2/: CMakeLists.txt  main.cpp
task_2/task_2_3/: CMakeLists.txt  main.cpp
task_2/task_2_4/: CMakeLists.txt  main.cpp
