cmake_minimum_required(VERSION 3.24.1)
project(task_1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(task_1_1)
add_subdirectory(task_1_2)
add_subdirectory(task_1_3)
add_subdirectory(task_1_4)
add_subdirectory(task_1_5)
add_subdirectory(task_1_6)
add_subdirectory(task_1_7)
add_subdirectory(task_1_8)
add_subdirectory(task_1_9)
add_subdirectory(task_1_10)

